# screensaver

./: .gitmodules  CMakeLists.txt  LICENSE  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix-screensaver.pro  owidget.cpp  owidget.h
shaders/: 52925.0.glsl  53741.11.glsl  53867.0.glsl  fragment.glsl  vertex.glsl
shaders/glslsandbox.com/: 53710.0.glsl  56751.0.glsl  56906.0.glsl  60836.0.glsl
src/: glslsandboxanimator.cpp  glslsandboxanimator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglanimator.cpp  openglanimator.h  owidget.cpp  owidget.h
